--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^6.0.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
